@@ -57,6 +57,15 @@ LogFile=/tmp/zabbix_agentd.log
 # Default:
 # EnableRemoteCommands=0
 
+### Option: LogRemoteCommands
+#	Enable logging of executed shell commands as warnings
+#	0 - disabled
+#	1 - enabled
+#
+# Mandatory: no
+# Default:
+# LogRemoteCommands=0
+
 ##### Passive checks related
 
 ### Option: Server
